--- a/src/config.properties
+++ b/src/config.properties
@@ -1,2 +1,9 @@
 #tanks count at initialization
 initTankCount = 10
+tankSpeed = 5
+bulletSpeed = 10
+gameWidth = 1080
+gameHeight = 800
+#fireStrategy
+goodFs= com.sw.tank.FourDirFireStrategy
+badFs = com.sw.tank.DefaultFireStrategy
